Follow checkstyle