@@ -9,11 +9,12 @@
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 
 package org.apache.iceberg.rest;
@@ -34,7 +35,6 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * This class provides vended credentials for Iceberg.
@@ -73,7 +73,7 @@ class IcebergVendedCredentialProvider {
         .map(Types.NestedField::name)
         .distinct()
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
     final var allowedOperations = authorizer.resolveAllowedStorageOperations(catalogName, identifier, columnNames);
     if (allowedOperations.isEmpty()) {
       return Collections.emptyList();
